[tool.poetry]
name = "idempotency-demo"
version = "0.1.0"
description = ""
authors = ["Elijah Wilson <eli@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
orjson = "^3.6.7"
httpx = "^0.22.0"
dependency-injector = "^4.39.1"
rq = "^1.10.1"
redis = "^4.2.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
aioboto3 = "^9.5.0"
asyncpg = "^0.25.0"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
ipython = "^8.2.0"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
